Finished Header of AIRBOX
Finished my header section of AIRBOX

--- a/AIRBOX/index.html
+++ b/AIRBOX/index.html
@@ -3,26 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=".//css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <title>AIRBOX</title>
+</head>
+<body class="nunito-sans">
+    <header role="banner">
+        <div class="topBar">
+            <div class="logoImg">
+                <img src="./css/images/airboxLogo.png" alt="'AIRBOX o^2' logo">
+            </div>
+            <div class="navBar">
+                <nav class="topBarNav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Web Hosting</a></li>
+                        <li><a href="#">Reseller Hosting</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contacts</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+            <div class="secondRow">
+                <div class="secondRowTopText">
+                    <h2>24/7 Real Person</h2>
+                    <h1>Customer Support</h1>
+                    <h2>For all our clients</h2>
+                </div>
+                <div class="secondRowBottomText">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi eum ad cumque delectus possimus quidem fugiat voluptas laborum placeat vitae doloribus dolore, commodi quibusdam sint fuga? Exercitationem molestiae officia praesentium!</p>
+                    <button class="tryNow">
+                        <a href="#">Try Now</a></button>
+                </div>
+            </div>
+    </header>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>AIRBOX</title>
 </head>
 <body>
     <header role="header">
-        <div class="headerLogo">
-            <img class="headerLogo" src="./css/images/airboxLogo.png" alt="AIRBOX o^2 logo">
-        </div>
-        <div class="headerNav">
-            <nav role="navigation">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Web Hosting</a></li>
-                    <li><a href="#">Reseller Hosting</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contacts</a></li>
-                </ul>
-            </nav>
+        <div class="topBar">
+            <div class="logoAndNav">
+                <img class="headerLogo" src="./css/images/airboxLogo.png" alt="AIRBOX o^2 logo">
+                <div class="headerNav">
+                    <nav role="navigation">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Web Hosting</a></li>
+                            <li><a href="#">Reseller Hosting</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contacts</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
 </body>
-</html>
+</html> -->
