Completed Third Row
Finished the third row of AIRBOX

--- a/AIRBOX/index.html
+++ b/AIRBOX/index.html
@@ -41,36 +41,33 @@
                 </div>
             </div>
     </header>
-</body>
-</html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>AIRBOX</title>
-</head>
-<body>
-    <header role="header">
-        <div class="topBar">
-            <div class="logoAndNav">
-                <img class="headerLogo" src="./css/images/airboxLogo.png" alt="AIRBOX o^2 logo">
-                <div class="headerNav">
-                    <nav role="navigation">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Web Hosting</a></li>
-                            <li><a href="#">Reseller Hosting</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contacts</a></li>
-                        </ul>
-                    </nav>
-                </div>
+    <main role="main">
+        <div class="thirdRow">
+            <div class="controlPanel">
+                <img src="https://cdn-icons-png.flaticon.com/128/900/900797.png" alt="Gears in Motion Icon">
+                <h3>Control</h3>
+                <h4 >Panel</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, illum!</p>
+            </div>
+            <div class="multiDomain">
+                <img src="https://cdn-icons-png.flaticon.com/128/900/900782.png" alt="Globe Icon">
+                <h3>Multi-Domain</h3>
+                <h4>Hosting</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, facere!</p>
+            </div>
+            <div class="ftp">
+                <img src="https://cdn-icons-png.flaticon.com/128/2956/2956800.png" alt="Cloud Upload Icon">
+                <h3>FTP</h3>
+                <h4>Service</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, iusto laboriosam.</p>
+            </div>
+            <div class="directSupport">
+                <img src="https://cdn-icons-png.flaticon.com/128/126/126509.png" alt="Phone Icon">
+                <h3>Direct</h3>
+                <h4>Support</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, aperiam?</p>
             </div>
         </div>
-    </header>
+    </main>
 </body>
-</html> -->
+</html>
