--- a/AIRBOX/index.html
+++ b/AIRBOX/index.html
@@ -28,6 +28,7 @@
                 </nav>
             </div>
         </div>
+<!-- START OF SECOND ROW -->
             <div class="secondRow">
                 <div class="secondRowTopText">
                     <h2>24/7 Real Person</h2>
@@ -42,6 +43,7 @@
             </div>
     </header>
     <main role="main">
+<!-- START OF THIRD ROW -->
         <div class="thirdRow">
             <div class="controlPanel">
                 <img src="https://cdn-icons-png.flaticon.com/128/900/900797.png" alt="Gears in Motion Icon">
@@ -68,6 +70,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, aperiam?</p>
             </div>
         </div>
+<!-- START OF FOURTH ROW -->
         <div class="fourthRow">
             <div class="miniHosting">
                 <h3>Mini Hosting</h3>
@@ -93,7 +96,7 @@
                 <button>
                     Sign Up
                 </button>
-            <div class="Pro Hosting">
+            <div class="proHosting">
                 <h3>Pro  Hosting</h3>
                 <h4>$16.99/MO</h4>
                 <ul>
