Progress on Fifth Row
Almost finished fifth row

--- a/AIRBOX/index.html
+++ b/AIRBOX/index.html
@@ -122,17 +122,17 @@
                 </button>
         </div> -->
 
-        <div class="fourthRow">
+        <!-- <div class="fourthRow">
             <div class="table">
-            <table>
-            <thead>
-                <tr>
-                    <th>Mini Hosting</th>
-                </tr>
-                <tbody>
-                    <th>$10.99/MO</th>
+                <table>
+                <thead>
                     <tr>
-                    </thead>
+                        <th>Mini Hosting</th>
+                    </tr>
+                <tbody>
+                        <th>$10.99/MO</th>
+                    <tr>
+            </thead>
                     <tbody>
                         <td>4 GB DISK SPACE</td>
                     </tr>
@@ -248,7 +248,55 @@
                             </tbody>
                         </table>
                     </div>
-</div>
+</div> -->
+
+        <div class="fifthRow">
+            <div class="hostingServices">
+                <h4>Hosting Services</h4>
+                <ul>
+                    <li>Shared Hosting</li>
+                    <li>Shared Cloud Hosting</li>
+                    <li>Reseller Hosting</li>
+                </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ex?</p>
+                    <button class="shopNow"><a href="#">Shop Now</a></button>
+            </div>
+            <div class="serverSolutions">
+                <h4>Server Solutions</h4>
+                <ul>
+                    <li>Dedicated Solutions</li>
+                    <li>Dynamic Cloud Server</li>
+                    <li>virtual Servers</li>
+                </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ex?</p>
+                    <button class="shopNow"><a href="#">Shop Now</a></button>
+            </div>
+            <div class="emailSolutions">
+                <h4>Email Solutions</h4>
+                <ul>
+                    <li>Instant Mail</li>
+                    <li>1&1 MailXchange</li>
+                    <li>Microsoft Exchange</li>
+                </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ex?</p>
+                    <button class="shopNow"><a href="#">Shop Now</a></button>
+            </div>
+            <div class="moreProducts">
+                <h4>More Products</h4>
+                <ul>
+                    <li>ListLocal</li>
+                    <li>Microsoft SharePoint</li>
+                    <li>eShops</li>
+                </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ex?</p>
+                <button class="shopNow"><a href="#">Shop Now</a></button>
+            </div>
+
+
+
+
+        </div>
+
 
                 </main>
             </body>
